@@ -2,13 +2,13 @@ package dev.abidino.nami.auth.application.config;
 
 import dev.abidino.nami.auth.domain.UserExternalApiClient;
 import dev.abidino.nami.user.application.api.UserResource;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
-@Service
 public class UserDetailService implements UserDetailsService {
 
     private final UserExternalApiClient userExternalApiClient;
@@ -20,7 +20,7 @@ public class UserDetailService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) {
         UserResource userResource = userExternalApiClient.findByUsername(username);
-        return new org.springframework.security.core.userdetails.User(userResource.username(), userResource.password(), Collections.emptyList());
+        return new User(userResource.username(), userResource.password(), List.of(new SimpleGrantedAuthority(userResource.role().name())));
     }
 }
 
